--- a/app/src/main/res/layout/activity_cardview.xml
+++ b/app/src/main/res/layout/activity_cardview.xml
@@ -1,6 +1,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/mainActivity"
+    android:background="@drawable/bg_alsfeld1"
     android:orientation="vertical">
 
     <android.support.v7.widget.RecyclerView
