--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -7,6 +7,7 @@
     <color name="white">#fff</color>
     <color name="orange">#FFBB33</color>
     <color name="label">#666</color>
+    <color name="green">#00b200</color>
 
     <color name="ActionBarSettings">#666</color>
 
